--- a/index.html
+++ b/index.html
@@ -8,22 +8,47 @@
   </head>
   <body>
     <section class="cover">
+
       <div class="title">
         <div class="cover-logo">
           <img src="/assets/image/figma.png" alt="" />
         </div>
+
         <div class="cover-paragraph">
           <h1>Fintech <br />Website <br />Landing <br />Page</h1>
         </div>
       </div>
+
       <div class="image-of-site">
         <div class="cover-img-left">
           <img src="/assets/image/Image.png" alt="" />
         </div>
+
         <div class="cover-img-right">
           <img src="/assets/image/Landing Page.png" alt="" />
         </div>
       </div>
+
     </section>
+    <header class="site-header">
+      <div class="logo-area">
+        <h1><img src="/assets/image/upgrade-inc-logo-vector-removebg-preview 1.png" alt="Site Logo" class="logo-img" /></h1>
+      </div>
+
+      <nav class="nav-links">
+        <ul>
+          <li><a href="#">Personal Loan</a></li>
+          <li><a href="#">One Card</a></li>
+          <li><a href="#">Savings</a></li>
+          <li><a href="#">Checking</a></li>
+          <li><a href="#">Help</a></li>
+        </ul>
+      </nav>
+
+      <div class="auth-buttons">
+        <button class="btn login">Login</button>
+        <button class="btn signup">Sign Up</button>
+      </div>
+    </header>
   </body>
 </html>
