--- a/index.html
+++ b/index.html
@@ -31,24 +31,46 @@
 
     </section>
     <header class="site-header">
-      <div class="logo-area">
-        <h1><img src="/assets/image/upgrade-inc-logo-vector-removebg-preview 1.png" alt="Site Logo" class="logo-img" /></h1>
-      </div>
+  <div class="logo-area">
+    <h1>
+      <img src="/assets/image/upgrade-inc-logo-vector-removebg-preview 1.png" alt="Site Logo" class="logo-img" />
+    </h1>
+  </div>
 
-      <nav class="nav-links">
-        <ul>
-          <li><a href="#">Personal Loan</a></li>
-          <li><a href="#">One Card</a></li>
-          <li><a href="#">Savings</a></li>
-          <li><a href="#">Checking</a></li>
-          <li><a href="#">Help</a></li>
-        </ul>
-      </nav>
+  <!-- Desktop Nav -->
+  <nav class="nav-links desktop-nav">
+    <ul>
+      <li><a href="#">Personal Loan</a></li>
+      <li><a href="#">One Card</a></li>
+      <li><a href="#">Savings</a></li>
+      <li><a href="#">Checking</a></li>
+      <li><a href="#">Help</a></li>
+    </ul>
+  </nav>
 
-      <div class="auth-buttons">
-        <button class="btn login">Login</button>
-        <button class="btn signup">Sign Up</button>
-      </div>
-    </header>
+  <div class="auth-buttons desktop-nav">
+    <button class="btn login">Login</button>
+    <button class="btn signup">Sign Up</button>
+  </div>
+  
+  <div class="auth-buttons2">
+    <button class="btn login">Login</button>
+    <button class="btn signup">Sign Up</button>
+  </div>
+  <!-- Mobile Hamburger -->
+  <details class="mobile-menu">
+    <summary class="hamburger">&#9776;</summary>
+    <nav class="nav-links">
+      <ul>
+        <li><a href="#">Personal Loan</a></li>
+        <li><a href="#">One Card</a></li>
+        <li><a href="#">Savings</a></li>
+        <li><a href="#">Checking</a></li>
+        <li><a href="#">Help</a></li>
+      </ul>
+    </nav>
+  </details>
+</header>
+
   </body>
 </html>
