fix some things and banner finished for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -71,6 +71,24 @@
     </nav>
   </details>
 </header>
-
+<main>
+  <section class="trust-banner">
+  <div class="banner-text">
+    <div class="trust-span">
+      <span class="small-text">🔥 100% TRUSTED PLATFORM</span>
+    </div>
+    <div class="banner-header">
+      <h2>FINANCE WITH <br>SECURITY AND <br> <span>FLEXIBILITY</span></h2>
+    </div>
+    <div class="banner-paragraph">
+      <p>no-fee checking account with cash back rewards. Enjoy fee-free banking and earn cash back on your everyday purchases.</p>
+    </div>
+    <button class="cta-button">Open Account</button>
+  </div>
+  <div class="banner-image">
+    <img src="/assets/image/Group 469294.png" alt="Trust illustration">
+  </div>
+</section>
+</main>
   </body>
 </html>
