--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
     <img src="/assets/image/Group 469294.png" alt="Trust illustration">
   </div>
 </section>
+<section class="logos-section">
+  <nav class="green-navbar">
+    <ul>
+      <li><a href="#"><img src="/assets/image/sepher.png" alt="Logo 1"></a></li>
+      <li><a href="#"><img src="/assets/image/samsung pay.png" alt="Logo 2"></a></li>
+      <li><a href="#"><img src="/assets/image/visa.png" alt="Logo 3"></a></li>
+      <li><a href="#"><img src="/assets/image/amazone.png" alt="Logo 4"></a></li>
+      <li><a href="#"><img src="/assets/image/Paypal.png" alt="Logo 5"></a></li>
+      <li><a href="#"><img src="/assets/image/alipay.png" alt="Logo 6"></a></li>
+    </ul>
+  </nav>
+</section>
 </main>
   </body>
 </html>
