about our bussiness finished for both

--- a/index.html
+++ b/index.html
@@ -101,6 +101,53 @@
     </ul>
   </nav>
 </section>
+
+<section class="saving-chart">
+  <div class="left-chart">
+    <div class="saving-chart-example">
+      <div class="saving-title">
+        <h4>saving month</h4>
+        <h2>1852,00</h2>
+        <p>Increase of <b>12%</b> from last month</p>
+      </div>
+      <div class="number">
+        <span>30k</span>
+        <span>20k</span>
+        <span>10k</span>
+        <span>0</span>
+      </div>
+      <div class="chart">
+        <div class="april"></div>
+        <div class="may"></div>
+        <div class="june"></div>
+        <div class="july"></div>
+        <div class="aug"></div>
+        <div class="sep"></div>
+      </div>
+    </div>
+  </div>
+  <div class="explain-about-our-bussiness">
+    <div class="about-our-bussiness">
+      <span><a href="">🔥ABOUT US</a></span>
+      <h3> <b>ALL YOUR MONEY NEEDS IN <br> ONE APP</b></h3>
+    </div>
+    <div class="options">
+      <div class="expenses-tracker">
+        <h4><b>Expenses Tracker</b></h4>
+        <p>Our comprehensive selection of medications, supplements, and healthcare products .</p>
+      </div>
+      <div class="crypto-connection">
+        <h4><b>Crypto Connection</b></h4>
+        <p>From advanced imaging technology such as MRI and CT scanners to precision surgical tools.</p>
+      </div>
+      <div class="automated-invoicing">
+        <h4><b>Automated Invoicing</b> </h4>
+        <p>We're committed to leveraging the latest innovations in medical technology.</p>
+      </div>
+    </div>
+  </div>
+  
+</section>
 </main>
   </body>
 </html>
