featured finished for both

--- a/index.html
+++ b/index.html
@@ -148,6 +148,25 @@
   </div>
   
 </section>
+<section class="featured-section">
+  <div class="featured-text">
+    <span class="featured-badge">🔥FEATURED</span>
+    <h3 class="featured-heading">All THE FEATURES <br>IN ONE APP</h3>
+    <p class="featured-paragraph">Get 3% cash back on everyday purchases, 2% on everything else4</p>
+    <p class="featured-paragraph">Extra Spending Power when you have Rewards Checking through Upgrade6</p>
+    <button class="featured-button"><b>Get Started</b></button>
+  </div>
+
+  <div class="featured-images">
+    <div class="featured-img1">
+      <img src="/assets/image/Services V-3 1.png" alt="Image 1" >
+    </div>
+    <div class="featured-img2">
+      <img src="/assets/image/mob b.png" alt="Image 2" class="featured-img2">
+    </div>
+  </div>
+</section>
+
 </main>
   </body>
 </html>
