security section finished for both

--- a/index.html
+++ b/index.html
@@ -166,6 +166,20 @@
     </div>
   </div>
 </section>
+<section class="security-section">
+  <div class="security-image-wrapper">
+    <img src="/assets/image/mob and card.png" alt="امنیت" />
+  </div>
+    <!-- متن -->
+    <div class="security-content">
+      <span class="security-badge">🔥TRUSTWORTHINESS</span>
+      <h3 class="security-heading">WE VALUE YOUR TRUST <br>AND SECURITY</h3>
+      <p class="security-description">Our Mission Is To Make Finance More Accessible, Transparent, And Secure For Everyone. With Cutting.</p>
+      <button class="security-cta">Get Started</button>
+    </div>
+
+    <!-- تصویر -->
+  </section>
 
 </main>
   </body>
