--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <section class="cover">
-
       <div class="title">
         <div class="cover-logo">
           <img src="/assets/image/figma.png" alt="" />
@@ -28,159 +27,303 @@
           <img src="/assets/image/Landing Page.png" alt="" />
         </div>
       </div>
-
     </section>
     <header class="site-header">
-  <div class="logo-area">
-    <h1>
-      <img src="/assets/image/upgrade-inc-logo-vector-removebg-preview 1.png" alt="Site Logo" class="logo-img" />
-    </h1>
-  </div>
-
-  <!-- Desktop Nav -->
-  <nav class="nav-links desktop-nav">
-    <ul>
-      <li><a href="#">Personal Loan</a></li>
-      <li><a href="#">One Card</a></li>
-      <li><a href="#">Savings</a></li>
-      <li><a href="#">Checking</a></li>
-      <li><a href="#">Help</a></li>
-    </ul>
-  </nav>
-
-  <div class="auth-buttons desktop-nav">
-    <button class="btn login">Login</button>
-    <button class="btn signup">Sign Up</button>
-  </div>
-  
-  <div class="auth-buttons2">
-    <button class="btn login">Login</button>
-    <button class="btn signup">Sign Up</button>
-  </div>
-  <!-- Mobile Hamburger -->
-  <details class="mobile-menu">
-    <summary class="hamburger">&#9776;</summary>
-    <nav class="nav-links">
-      <ul>
-        <li><a href="#">Personal Loan</a></li>
-        <li><a href="#">One Card</a></li>
-        <li><a href="#">Savings</a></li>
-        <li><a href="#">Checking</a></li>
-        <li><a href="#">Help</a></li>
-      </ul>
-    </nav>
-  </details>
-</header>
-<main>
-  <section class="trust-banner">
-  <div class="banner-text">
-    <div class="trust-span">
-      <span class="small-text">🔥 100% TRUSTED PLATFORM</span>
-    </div>
-    <div class="banner-header">
-      <h2>FINANCE WITH <br>SECURITY AND <br> <span>FLEXIBILITY</span></h2>
-    </div>
-    <div class="banner-paragraph">
-      <p>no-fee checking account with cash back rewards. Enjoy fee-free banking and earn cash back on your everyday purchases.</p>
-    </div>
-    <button class="cta-button">Open Account</button>
-  </div>
-  <div class="banner-image">
-    <img src="/assets/image/Group 469294.png" alt="Trust illustration">
-  </div>
-</section>
-<section class="logos-section">
-  <nav class="green-navbar">
-    <ul>
-      <li><a href="#"><img src="/assets/image/sepher.png" alt="Logo 1"></a></li>
-      <li><a href="#"><img src="/assets/image/samsung pay.png" alt="Logo 2"></a></li>
-      <li><a href="#"><img src="/assets/image/visa.png" alt="Logo 3"></a></li>
-      <li><a href="#"><img src="/assets/image/amazone.png" alt="Logo 4"></a></li>
-      <li><a href="#"><img src="/assets/image/Paypal.png" alt="Logo 5"></a></li>
-      <li><a href="#"><img src="/assets/image/alipay.png" alt="Logo 6"></a></li>
-    </ul>
-  </nav>
-</section>
-
-<section class="saving-chart">
-  <div class="left-chart">
-    <div class="saving-chart-example">
-      <div class="saving-title">
-        <h4>saving month</h4>
-        <h2>1852,00</h2>
-        <p>Increase of <b>12%</b> from last month</p>
+      <div class="logo-area">
+        <h1>
+          <img
+            src="/assets/image/upgrade-inc-logo-vector-removebg-preview 1.png"
+            alt="Site Logo"
+            class="logo-img"
+          />
+        </h1>
       </div>
-      <div class="number">
-        <span>30k</span>
-        <span>20k</span>
-        <span>10k</span>
-        <span>0</span>
-      </div>
-      <div class="chart">
-        <div class="april"></div>
-        <div class="may"></div>
-        <div class="june"></div>
-        <div class="july"></div>
-        <div class="aug"></div>
-        <div class="sep"></div>
-      </div>
-    </div>
-  </div>
-  <div class="explain-about-our-bussiness">
-    <div class="about-our-bussiness">
-      <span><a href="">🔥ABOUT US</a></span>
-      <h3> <b>ALL YOUR MONEY NEEDS IN <br> ONE APP</b></h3>
-    </div>
-    <div class="options">
-      <div class="expenses-tracker">
-        <h4><b>Expenses Tracker</b></h4>
-        <p>Our comprehensive selection of medications, supplements, and healthcare products .</p>
-      </div>
-      <div class="crypto-connection">
-        <h4><b>Crypto Connection</b></h4>
-        <p>From advanced imaging technology such as MRI and CT scanners to precision surgical tools.</p>
-      </div>
-      <div class="automated-invoicing">
-        <h4><b>Automated Invoicing</b> </h4>
-        <p>We're committed to leveraging the latest innovations in medical technology.</p>
-      </div>
-    </div>
-  </div>
-  
-</section>
-<section class="featured-section">
-  <div class="featured-text">
-    <span class="featured-badge">🔥FEATURED</span>
-    <h3 class="featured-heading">All THE FEATURES <br>IN ONE APP</h3>
-    <p class="featured-paragraph">Get 3% cash back on everyday purchases, 2% on everything else4</p>
-    <p class="featured-paragraph">Extra Spending Power when you have Rewards Checking through Upgrade6</p>
-    <button class="featured-button"><b>Get Started</b></button>
-  </div>
 
-  <div class="featured-images">
-    <div class="featured-img1">
-      <img src="/assets/image/Services V-3 1.png" alt="Image 1" >
-    </div>
-    <div class="featured-img2">
-      <img src="/assets/image/mob b.png" alt="Image 2" class="featured-img2">
-    </div>
-  </div>
-</section>
-<section class="security-section">
-  <div class="security-image-wrapper">
-    <img src="/assets/image/mob and card.png" alt="امنیت" />
-  </div>
-    <!-- متن -->
-    <div class="security-content">
-      <span class="security-badge">🔥TRUSTWORTHINESS</span>
-      <h3 class="security-heading">WE VALUE YOUR TRUST <br>AND SECURITY</h3>
-      <p class="security-description">Our Mission Is To Make Finance More Accessible, Transparent, And Secure For Everyone. With Cutting.</p>
-      <button class="security-cta">Get Started</button>
-    </div>
+      <!-- Desktop Nav -->
+      <nav class="nav-links desktop-nav">
+        <ul>
+          <li><a href="#">Personal Loan</a></li>
+          <li><a href="#">One Card</a></li>
+          <li><a href="#">Savings</a></li>
+          <li><a href="#">Checking</a></li>
+          <li><a href="#">Help</a></li>
+        </ul>
+      </nav>
 
-    <!-- تصویر -->
-  </section>
+      <div class="auth-buttons desktop-nav">
+        <button class="btn login">Login</button>
+        <button class="btn signup">Sign Up</button>
+      </div>
 
-</main>
+      <div class="auth-buttons2">
+        <button class="btn login">Login</button>
+        <button class="btn signup">Sign Up</button>
+      </div>
+      <!-- Mobile Hamburger -->
+      <details class="mobile-menu">
+        <summary class="hamburger">&#9776;</summary>
+        <nav class="nav-links">
+          <ul>
+            <li><a href="#">Personal Loan</a></li>
+            <li><a href="#">One Card</a></li>
+            <li><a href="#">Savings</a></li>
+            <li><a href="#">Checking</a></li>
+            <li><a href="#">Help</a></li>
+          </ul>
+        </nav>
+      </details>
+    </header>
+    <main>
+      <section class="trust-banner">
+        <div class="banner-text">
+          <div class="trust-span">
+            <span class="small-text">🔥 100% TRUSTED PLATFORM</span>
+          </div>
+          <div class="banner-header">
+            <h2>
+              FINANCE WITH <br />SECURITY AND <br />
+              <span>FLEXIBILITY</span>
+            </h2>
+          </div>
+          <div class="banner-paragraph">
+            <p>
+              no-fee checking account with cash back rewards. Enjoy fee-free
+              banking and earn cash back on your everyday purchases.
+            </p>
+          </div>
+          <button class="cta-button">Open Account</button>
+        </div>
+        <div class="banner-image">
+          <img src="/assets/image/Group 469294.png" alt="Trust illustration" />
+        </div>
+      </section>
+      <section class="logos-section">
+        <nav class="green-navbar">
+          <ul>
+            <li>
+              <a href="#"
+                ><img src="/assets/image/sepher.png" alt="Logo 1"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="/assets/image/samsung pay.png" alt="Logo 2"
+              /></a>
+            </li>
+            <li>
+              <a href="#"><img src="/assets/image/visa.png" alt="Logo 3" /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="/assets/image/amazone.png" alt="Logo 4"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="/assets/image/Paypal.png" alt="Logo 5"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="/assets/image/alipay.png" alt="Logo 6"
+              /></a>
+            </li>
+          </ul>
+        </nav>
+      </section>
+
+      <section class="saving-chart">
+        <div class="left-chart">
+          <div class="saving-chart-example">
+            <div class="saving-title">
+              <h4>saving month</h4>
+              <h2>1852,00</h2>
+              <p>Increase of <b>12%</b> from last month</p>
+            </div>
+            <div class="number">
+              <span>30k</span>
+              <span>20k</span>
+              <span>10k</span>
+              <span>0</span>
+            </div>
+            <div class="chart">
+              <div class="april"></div>
+              <div class="may"></div>
+              <div class="june"></div>
+              <div class="july"></div>
+              <div class="aug"></div>
+              <div class="sep"></div>
+            </div>
+          </div>
+        </div>
+        <div class="explain-about-our-bussiness">
+          <div class="about-our-bussiness">
+            <span><a href="">🔥ABOUT US</a></span>
+            <h3>
+              <b
+                >ALL YOUR MONEY NEEDS IN <br />
+                ONE APP</b
+              >
+            </h3>
+          </div>
+          <div class="options">
+            <div class="expenses-tracker">
+              <h4><b>Expenses Tracker</b></h4>
+              <p>
+                Our comprehensive selection of medications, supplements, and
+                healthcare products .
+              </p>
+            </div>
+            <div class="crypto-connection">
+              <h4><b>Crypto Connection</b></h4>
+              <p>
+                From advanced imaging technology such as MRI and CT scanners to
+                precision surgical tools.
+              </p>
+            </div>
+            <div class="automated-invoicing">
+              <h4><b>Automated Invoicing</b></h4>
+              <p>
+                We're committed to leveraging the latest innovations in medical
+                technology.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="featured-section">
+        <div class="featured-text">
+          <span class="featured-badge">🔥FEATURED</span>
+          <h3 class="featured-heading">All THE FEATURES <br />IN ONE APP</h3>
+          <p class="featured-paragraph">
+            Get 3% cash back on everyday purchases, 2% on everything else4
+          </p>
+          <p class="featured-paragraph">
+            Extra Spending Power when you have Rewards Checking through Upgrade6
+          </p>
+          <button class="featured-button"><b>Get Started</b></button>
+        </div>
+
+        <div class="featured-images">
+          <div class="featured-img1">
+            <img src="/assets/image/Services V-3 1.png" alt="Image 1" />
+          </div>
+          <div class="featured-img2">
+            <img
+              src="/assets/image/mob b.png"
+              alt="Image 2"
+              class="featured-img2"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="security-section">
+        <div class="security-image-wrapper">
+          <img src="/assets/image/mob and card.png" alt="امنیت" />
+        </div>
+        <!-- متن -->
+        <div class="security-content">
+          <span class="security-badge">🔥TRUSTWORTHINESS</span>
+          <h3 class="security-heading">
+            WE VALUE YOUR TRUST <br />AND SECURITY
+          </h3>
+          <p class="security-description">
+            Our Mission Is To Make Finance More Accessible, Transparent, And
+            Secure For Everyone. With Cutting.
+          </p>
+          <button class="security-cta">Get Started</button>
+        </div>
+
+        <!-- تصویر -->
+      </section>
+
+      <section class="section-services">
+        <div class="services-content">
+          <span class="services-badge">🔥SERVICES</span>
+          <h3 class="services-heading">
+            CAN HELP YOU ACHIVE <br /><span>FINANCIAL SUCCESS</span>
+          </h3>
+        </div>
+        <div class="services-header">
+          <div class="sevices-img">
+            <img src="/assets/image/Frame 1000011516 (1).png" alt="" />
+          </div>
+          <div class="services-explain">
+            <div class="services-logo">
+              <img src="/assets/image/Frame 1000011418.png" alt="" />
+            </div>
+            <div class="explain">
+              <h3>Transfers Across The Globe Are Free</h3>
+            </div>
+          </div>
+        </div>
+        <div class="creat-card-and-personalize">
+          <div class="create-card">
+            <div class="creat-card-explain">
+              <div class="creat-card-logo">
+                <img src="/assets/image/Frame 1000011418 (1).png" alt="logo" />
+              </div>
+              <h3 class="creat-card-heading">
+                Create A Card That Is <br>Unique And Customized
+              </h3>
+              <p class="creat-card-paragraph">
+                we offer a comprehensive range of innovative financial services
+                tailored to meet your needs. Our services include High-Yield
+                Savings Accounts.
+              </p>
+            </div>
+            <div class="creat-your-card">
+              <span class="card-name">WELCOME ,<b>TOM!</b></span>
+              <img src="/assets/image/Home V-1 1.png" alt="" />
+            </div>
+          </div>
+          <div class="personalize">
+            <div class="personalize-logo">
+              <img src="/assets/image/Frame 1000011417.png" alt="" />
+            </div>
+            <h3 class="personalize-heading">
+              Pesonalized Insights <br />And Financial Goals
+            </h3>
+            <p class="personalize-paragraph">
+              savings accounts that offer competitive interest rates and
+              flexible deposit options. Investment Invest wisely with our
+              personalized.Our services include High-Yield Savings
+            </p>
+            <div class="card-example">
+              <div class="your-card">
+                <img src="/assets/image/Dashboard 2.png" alt="">
+              </div>
+              <div class="total-balance">
+                <img src="/assets/image/Frame 1000011446.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="site-options">
+          <a href="" class="dedication-link">
+          <div class="dedication">
+            <h5>100% <br>Dedication</h5>
+            <p>we offer a comprehensive range of innovative financial services tailored to meet your needs.</p>
+          </div>
+          </a>
+          <a href="" class="hold-money-link">
+          <div class="hold-money">
+            <img src="/assets/image/Frame 1000011418 (2).png" alt="">
+            <h5>Hold Money In <br>30+ Currencies</h5>
+          </div>
+          </a>
+          <a href="" class="visit-link">
+          <div class="visit">
+            <h5><span>Visit Our</span> <br> Services Page</h5>
+          </div>
+          </a>
+        </div>
+        <div class="site-options-button">
+          <button>
+            <b>View More</b>
+          </button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
