--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <img src="/assets/image/Frame 1000011418 (1).png" alt="logo" />
               </div>
               <h3 class="creat-card-heading">
-                Create A Card That Is <br>Unique And Customized
+                Create A Card That Is <br />Unique And Customized
               </h3>
               <p class="creat-card-paragraph">
                 we offer a comprehensive range of innovative financial services
@@ -291,31 +291,37 @@
             </p>
             <div class="card-example">
               <div class="your-card">
-                <img src="/assets/image/Dashboard 2.png" alt="">
+                <img src="/assets/image/Dashboard 2.png" alt="" />
               </div>
               <div class="total-balance">
-                <img src="/assets/image/Frame 1000011446.png" alt="">
+                <img src="/assets/image/Frame 1000011446.png" alt="" />
               </div>
             </div>
           </div>
         </div>
         <div class="site-options">
           <a href="" class="dedication-link">
-          <div class="dedication">
-            <h5>100% <br>Dedication</h5>
-            <p>we offer a comprehensive range of innovative financial services tailored to meet your needs.</p>
-          </div>
+            <div class="dedication">
+              <h5>100% <br />Dedication</h5>
+              <p>
+                we offer a comprehensive range of innovative financial services
+                tailored to meet your needs.
+              </p>
+            </div>
           </a>
           <a href="" class="hold-money-link">
-          <div class="hold-money">
-            <img src="/assets/image/Frame 1000011418 (2).png" alt="">
-            <h5>Hold Money In <br>30+ Currencies</h5>
-          </div>
+            <div class="hold-money">
+              <img src="/assets/image/Frame 1000011418 (2).png" alt="" />
+              <h5>Hold Money In <br />30+ Currencies</h5>
+            </div>
           </a>
           <a href="" class="visit-link">
-          <div class="visit">
-            <h5><span>Visit Our</span> <br> Services Page</h5>
-          </div>
+            <div class="visit">
+              <h5>
+                <span>Visit Our</span> <br />
+                Services Page
+              </h5>
+            </div>
           </a>
         </div>
         <div class="site-options-button">
@@ -324,6 +330,79 @@
           </button>
         </div>
       </section>
+      <section class="my-section">
+        <div class="intro-div">
+          <span>🔥TESTIMONIAL</span>
+          <h3>GET TO KNOW OUR CLIENTS</h3>
+        </div>
+
+        <div class="three-divs">
+          <div class="item left">
+            <div class="logo">
+              <img src="/assets/image/fi_1155679.png" alt="" />
+            </div>
+            <p>
+              I like getting the SMS & knowing the jobs done. I often refer to
+              it, “hope you get a ping today!” because my product
+            </p>
+            <div class="inner-div">
+              <div class="profile">
+                <img src="/assets/image/Ellipse 12.png" alt="تصویر ۱" />
+              </div>
+              <div class="name-rate">
+                <img src="/assets/image/image 20.png" alt="تصویر ۲" />
+                <span><b>Mike Torello</b></span>
+                <span>CEO of Initech</span>
+              </div>
+            </div>
+          </div>
+          <div class="item between">
+            <div class="logo">
+              <img src="/assets/image/fi_1155679.png" alt="" />
+            </div>
+            <p>
+              We have successfully sold digital product and have happy with the
+              results & look forward to using it again this.
+            </p>
+            <div class="inner-div">
+              <div class="profile">
+                <img src="/assets/image/Ellipse 12 (1).png" alt="تصویر ۳" />
+              </div>
+              <div class="name-rate">
+                <img src="/assets/image/image 20.png" alt="تصویر ۴" />
+                <span><b>Richards Hawkins</b></span>
+                <span>Marketing Manager of Upnow</span>
+              </div>
+            </div>
+          </div>
+          <div class="item right">
+            <div class="logo">
+              <img src="/assets/image/fi_1155679.png" alt="" />
+            </div>
+            <p>
+              Design Monks offers producers a cost-effective selling tool.
+              Having the ability to post prices that you want on an exchange
+              visible .
+            </p>
+            <div class="inner-div">
+              <div class="profile">
+                <img src="assets/image/Ellipse 12 (2).png" alt="تصویر ۵" />
+              </div>
+              <div class="name-rate">
+                <img src="/assets/image/image 20.png" alt="تصویر ۶" />
+                <span><b>Thomas Magnum</b></span>
+                <span>Barellon NSW</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="site-options-button">
+          <button>
+            <b>View More</b>
+          </button>
+        </div>
+      </section>
+
     </main>
   </body>
 </html>
