last banner for both finish

--- a/index.html
+++ b/index.html
@@ -402,7 +402,20 @@
           </button>
         </div>
       </section>
-
+      <section class="hero">
+        <div class="hero-content">
+          <h3>ARE YOU READY TO <br>START?</h3>
+          <p>
+            Personalize your settings, follow your progress, archive your
+            highlights and notes automatically. Glose is the ultimate reading
+            companion.
+          </p>
+          <a href="#" class="btn">Get Started</a>
+        </div>
+        <div class="hero-image">
+          <img src="/assets/image/Group 469293 (2).png" alt="">
+        </div>
+      </section>
     </main>
   </body>
 </html>
