--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
       </section>
       <section class="hero">
         <div class="hero-content">
-          <h3>ARE YOU READY TO <br>START?</h3>
+          <h3>ARE YOU READY TO <br />START?</h3>
           <p>
             Personalize your settings, follow your progress, archive your
             highlights and notes automatically. Glose is the ultimate reading
@@ -413,9 +413,78 @@
           <a href="#" class="btn">Get Started</a>
         </div>
         <div class="hero-image">
-          <img src="/assets/image/Group 469293 (2).png" alt="">
+          <img src="/assets/image/Group 469293 (2).png" alt="" />
         </div>
       </section>
     </main>
+    <footer>
+      <div class="linkbar">
+        <div class="last-logo">
+          <img
+            src="/assets/image/upgrade-inc-logo-vector-removebg-preview 1 (2).png"
+            alt=""
+          />
+        </div>
+        <div class="googleplay-applestore">
+          <a href=""
+            ><img src="/assets/image/Mobile app store badge.png" alt="" /></a
+          ><a href=""
+            ><img src="/assets/image/Mobile app store badge (1).png" alt=""
+          /></a>
+        </div>
+        <div class="footer-links">
+          <nav class="footer-nav">
+            <ul>
+              <li><a href="">Personal Loan</a></li>
+              <li><a href="">One Card</a></li>
+              <li><a href="">Savings</a></li>
+              <li><a href="">Checking</a></li>
+              <li><a href="">Contact</a></li>
+              <li><a href="">Help</a></li>
+              <li><a href="">Support</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="socialmedia">
+          <div>
+            <a href=""
+              ><img src="/assets/image/Frame 1000003573.png" alt=""
+            /></a>
+          </div>
+          <div>
+            <a href=""
+              ><img src="/assets/image/Frame 1000003603.png" alt=""
+            /></a>
+          </div>
+          <div>
+            <a href=""
+              ><img src="/assets/image/Frame 1000003604.png" alt=""
+            /></a>
+          </div>
+          <div>
+            <a href=""
+              ><img src="/assets/image/Frame 1000003602.png" alt=""
+            /></a>
+          </div>
+        </div>
+        <div class="email">
+          <span><b>Send Your Feedback:</b> <a href="">kachinava2@gmail.committed</a></span>
+        </div>
+        <div class="footer-nav2">
+          <nav>
+            <ul>
+              <a href="">Privacy Policy &nbsp;|</a
+              ><a href="">&nbsp;Terms & Condition &nbsp;|</a
+              ><a href=""> &nbsp;Cookie Notice &nbsp;|</a
+              ><a href="">&nbsp;Copyright Policy &nbsp;|</a
+              ><a href="">&nbsp;Data Policy </a>
+            </ul>
+          </nav>
+        </div>
+        <div class="my-name">
+          <p class="copyright-and-name"> &copy; 2025 Made By Kachinava. All reserved. </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
